# SG_Send__QA

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  playwright-setup-guide.md
.claude/explorer/: CLAUDE.md  browser-tests-briefing.md
.github/workflows/: ci-pipeline.yml  ci-pipeline__dev.yml  ci-pipeline__main.yml  deploy-gh-pages.yml  qa-acceptance-tests.yml  run-tests.yml
cli/: generate_docs.py
config/: .env.example  test-config.json
docs/: Gemfile  index.md  invalid_token_rejected.md  landing_page_has_access_gate.md  landing_page_loads.md
docs/architecture/: v0.2.20__test-architecture-and-implementation-plan.md
docs/framework/: v0.2.20__browser-test-framework.md
scripts/: qa__run-locally.sh
server/: main.py
sg_send_qa/: __init__.py
sg_send_qa/api/: Fast_API__QA__Server.py  QA_API__Runner.py  QA_API__Server.py  QA_API__Session.py  Schema__Capture_Config.py  Schema__QA_Request.py  Schema__QA_Response.py  Schema__Transition_Observed.py  Schema__Upload_Request.py  __main__.py
sg_send_qa/browser/: Harness_State__Persistence.py  JS_Query__Execute.py  JS_Query__Shadow_DOM.py  QA_Browser.py  SG_Send__Browser__Pages.py  SG_Send__Browser__Test_Harness.py  Schema__Browse_Page.py  Schema__Browser_Test_Config.py  Schema__Download_Page.py  Schema__Gallery_Page.py  Schema__Harness_State.py  Schema__Upload_Page.py  Schema__Viewer_Page.py
sg_send_qa/ci/: QA_Diff_Screenshots.py  diff_screenshots.py
sg_send_qa/cli/: QA_Generate_Docs.py  QA_Run_Tests.py  generate_docs.py  generate_docs_v2.py  run_tests.py
sg_send_qa/models/: QA_Config.py  QA_Types.py
sg_send_qa/server/: main.py
sg_send_qa/state_machines/: State_Machine__Download.py  State_Machine__Snapshot.py  State_Machine__Snapshot__Diff.py  export_schemas.py  (+4 more)
sg_send_qa__site/: CNAME  _config.yml
tests/: conftest.py
(+408 files in other folders)
